--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>What would Bom say?</title>
 <!--        Bootstrap -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="./css/bootstrap.min.css">
+        <link rel="stylesheet" href="./css/main.css">
 <!--        Load the font        -->
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">    
     </head>
@@ -53,9 +53,9 @@
         </div>              
         </div> 
     
-    <script src="js/jQuery.js"></script>
-    <script src="js/helper.js"></script>
-    <script src="js/BomsResponseBuilder.js"></script>
+    <script src="./js/jQuery.js"></script>
+    <script src="./js/helper.js"></script>
+    <script src="./js/BomsResponseBuilder.js"></script>
 
         
     </body>
